Fixed options overflow

--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ main div {
 #option1 {
     flex: 1 1 100%;
     margin: 5px;
-    height: 180px;
+    height: auto;
     line-height: 180px;
     border-radius: 10px;
     cursor: pointer;
@@ -77,7 +77,7 @@ main div {
 #option2 {
     flex: 1 1 100%;
     margin: 5px;
-    height: 180px;
+    height: auto;
     line-height: 180px;
     border-radius: 10px;
     cursor: pointer;
